# tarot-oracle

./: .gitignore  AGENTS.md  analyze_roman_lengths.py  implementation_plan.md  license  plan.md  progress.md  prompt.md  pyproject.toml  ralph.lock.json  readme.md  request.review.md  requirements.md  review.passed.md  test_zodiac_plus_spread.json  test_zodiac_spread.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  release_checklist.md
.github/workflows/: ci.yml
.ralph/: recovery.notes.md  state.json
tarot_oracle/: __init__.py  cli.py  config.py  data_loader.py  exceptions.py  loaders.py  messages.py  oracle.py  roman_numerals.py  tarot.py
tarot_oracle/data/decks/: rider-waite.json
tarot_oracle/data/spreads/: 3-card.json  celtic.json  cross.json  crowley.json  single.json  zodiac_plus.json
tests/: __init__.py  test_cli.py  test_config.py  test_data_loader.py  test_exceptions.py  test_loaders.py  test_openrouter_integration.py  test_oracle.py  test_performance.py  test_semantic_system.py  test_tarot.py
tests/vectors/: zodiac_plus_spread.correct.json  zodiac_spread.correct.json
