[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarot-oracle"
version = "0.1.0"
description = "AI-powered tarot divination system with semantic analysis"
readme = "readme.md"
license = "MIT"
authors = [
    {name = "Tarot Oracle Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Religion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Religion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tarot-oracle = "tarot_oracle.cli:main"
# Maintain backward compatibility
tarot = "tarot_oracle.tarot:main"
oracle = "tarot_oracle.oracle:main"

[project.urls]
Homepage = "https://github.com/tarot-oracle/tarot-oracle"
Repository = "https://github.com/tarot-oracle/tarot-oracle"
Issues = "https://github.com/tarot-oracle/tarot-oracle/issues"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Temporarily relaxed for build optimization
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
# disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
# warn_unreachable = true
strict_equality = true

[tool.setuptools.packages.find]
include = ["tarot_oracle*"]
exclude = ["test_env*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "T20", "PT", "Q"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=tarot_oracle",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]